Fix HTML structure and update links

--- a/inicio.html
+++ b/inicio.html
@@ -11,9 +11,9 @@
     <header>
         <h1 class="logo">OMEGA</h1>
         <nav class="nav-principal">
-            <a href="/6acercade/index.html" class="link">Sobre Nosotros</a>
-            <a href="/4tienda/index.html" class="link">Tienda</a>
-            <a href="/3Eventos/index.html"class="link">Eventos</a>
+            <a href="/6acercade/acercade.html" class="link">Sobre Nosotros</a>
+            <a href="/4tienda/tienda.html" class="link">Tienda</a>
+            <a href="/3Eventos/eventos.html"class="link">Eventos</a>
             <a href="/0login/index.html" class="salir">Salir</a>
         </nav>
     </header>
@@ -129,4 +129,5 @@
         </div>
     </footer>
 </body>
+
 </html>
