--- a/politicas.html
+++ b/politicas.html
@@ -10,9 +10,9 @@
     <header>
         <h1 class="logo">OMEGA</h1>
         <nav class="nav-principal">
-            <a href="/2inicio/index.html" class="link">Inicio</a>
-            <a href="/4tienda/index.html" class="link">Tienda</a>
-            <a href="/3Eventos/index.html"class="link">Eventos</a>
+            <a href="/2inicio/inicio.html" class="link">Inicio</a>
+            <a href="/4tienda/tienda.html" class="link">Tienda</a>
+            <a href="/3Eventos/eventos.html"class="link">Eventos</a>
             <a href="/0login/index.html" class="salir">Salir</a>
         </nav>
     </header>
@@ -95,3 +95,4 @@
     </footer>
 </body>
 </html>
+
