--- a/salinas.html
+++ b/salinas.html
@@ -11,9 +11,9 @@
     <header>
         <h1 class="logo">OMEGA</h1>
             <nav class="nav-principal">
-                <a href="/2inicio/index.html">Inicio</a>
-                <a href="/4tienda/index.html">Tienda</a>
-                <a href="/3Eventos/index.html">Eventos</a>
+                <a href="/2inicio/inicio.html">Inicio</a>
+                <a href="/4tienda/tienda.html">Tienda</a>
+                <a href="/3Eventos/eventos.html">Eventos</a>
                 <button class="salir"><a href="/0login/index.html">salir</a></button>
             </nav>
     </header>
@@ -133,4 +133,5 @@
         </div>
     </footer>
 </body>
+
 </html>
