--- a/eventos.html
+++ b/eventos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omega</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-eventos.css" />
   </head>
   <body>
     <header>
@@ -105,4 +105,5 @@
     </footer>
   </body>
 </html>
+
 
