--- a/politicas.html
+++ b/politicas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Políticas de privacidad - OMEGA</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-politicas.css" />
 </head>
 <body>
     <header>
@@ -95,4 +95,5 @@
     </footer>
 </body>
 </html>
+
 
