--- a/privacidad.html
+++ b/privacidad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacidad</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo-privacidad.css">
 </head>
 <body>
     <header>
