Change stylesheet link and fix HTML formatting
Updated the stylesheet link and corrected HTML structure.

--- a/salinas.html
+++ b/salinas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos-salinas.css">
 </head>
 <body>
     <!--cabeza de la pagina web-->
@@ -135,3 +135,4 @@
 </body>
 
 </html>
+
