Modify terminos.html with new stylesheet
Updated the stylesheet link and added new HTML structure.

--- a/terminos.html
+++ b/terminos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Políticas de Privacidad - OMEGA</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-terminos.css" />
 </head>
 <body>
     <header>
@@ -69,5 +69,6 @@
     </footer>
     </body>
 </html>
+
 
 
