--- a/tienda.html
+++ b/tienda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-tienda.css">
 </head>
 <body>
    <!-- Etiqueta de cabeza de la página web -->
