--- a/acercade.html
+++ b/acercade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Acerca de Nosotros | OMEGA - Seguridad Digital</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style-acercade.css"/>
 </head>
 <body>
     <header>
@@ -82,4 +82,5 @@
     </footer>
 </body>
 </html>
+
 
