--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="/2inicio/index.html">iniciar sesion</a>
             </div>
             <div class="registrarse">
-                <a href="/1registro/registro.html">Registrarse</a>
+                <a href="registro.html">Registrarse</a>
             </div>
         </form>
     </div>
