--- a/privacidad.html
+++ b/privacidad.html
@@ -10,10 +10,10 @@
     <header>
         <h1 class="logo">OMEGA</h1>
         <nav class="nav-principal">
-            <a href="/2inicio/inicio.html" class="link">Inicio</a>
-            <a href="/4tienda/tienda.html" class="link">Tienda</a>
-            <a href="/3Eventos/eventos.html"class="link">Eventos</a>
-            <a href="/0login/index.html" class="salir">Salir</a>
+            <a href="inicio.html" class="link">Inicio</a>
+            <a href="tienda.html" class="link">Tienda</a>
+            <a href="eventos.html"class="link">Eventos</a>
+            <a href="index.html" class="salir">Salir</a>
         </nav>
     </header>
 
