--- a/registro.html
+++ b/registro.html
@@ -45,9 +45,10 @@
             <input type="date" required> 
         </div>
         <div class="opt">
-            <a href="/0login/index.html">enviar</a>
+            <a href="index.html">enviar</a>
         </div>
     </form>
     </div>
 </body>
+
 </html>
