--- a/salinas.html
+++ b/salinas.html
@@ -11,9 +11,9 @@
     <header>
         <h1 class="logo">OMEGA</h1>
             <nav class="nav-principal">
-                <a href="/2inicio/inicio.html">Inicio</a>
-                <a href="/4tienda/tienda.html">Tienda</a>
-                <a href="/3Eventos/eventos.html">Eventos</a>
+                <a href="inicio.html">Inicio</a>
+                <a href="tienda.html">Tienda</a>
+                <a href="eventos.html">Eventos</a>
                 <button class="salir"><a href="/0login/index.html">salir</a></button>
             </nav>
     </header>
@@ -135,4 +135,5 @@
 </body>
 
 </html>
+
 
