Update navigation links in tienda.html

--- a/tienda.html
+++ b/tienda.html
@@ -14,10 +14,10 @@
         <p>"Tecnología al alcance de un clic"</p>
     </div>
     <nav class="nav">
-        <a href="/2inicio/index.html">Inicio</a>
-        <a href="/3Eventos/index.html">Eventos</a>
-        <a href="/6acercade/index.html">Sobre Nosotros</a>
-        <a href="/0login/index.html">Salir</a>
+        <a href="index.html">Inicio</a>
+        <a href="index.html">Eventos</a>
+        <a href="index.html">Sobre Nosotros</a>
+        <a href="index.html">Salir</a>
 </div>
 
     <!--------------------------------------------------------------------->
