--- a/eventos.html
+++ b/eventos.html
@@ -10,10 +10,10 @@
     <header>
       <h1 class="logo">OMEGA</h1>
       <nav class="nav-principal">
-        <a href="/2inicio/inicio.html" class="link">Inicio</a>
-        <a href="/4tienda/tienda.html" class="link">Tienda</a>
-        <a href="/6acercade/acercade.html" class="link">Sobre Nosotros</a>
-        <a href="/0login/index.html" class="salir">Salir</a>
+        <a href="/inicio.html" class="link">Inicio</a>
+        <a href="/tienda.html" class="link">Tienda</a>
+        <a href="/acercade.html" class="link">Sobre Nosotros</a>
+        <a href="/index.html" class="salir">Salir</a>
       </nav>
     </header>
 
@@ -105,5 +105,6 @@
     </footer>
   </body>
 </html>
+
 
 
