Fix login link to point to the correct path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="recordar"><a href="">¿Olvidaste tu contraseña?</a></div>
             
             <div class="boton">
-                <a href="/2inicio/index.html">iniciar sesion</a>
+                <a href="/index.html">iniciar sesion</a>
             </div>
             <div class="registrarse">
                 <a href="/registro.html">Registrarse</a>
