--- a/salinas.html
+++ b/salinas.html
@@ -11,10 +11,10 @@
     <header>
         <h1 class="logo">OMEGA</h1>
             <nav class="nav-principal">
-                <a href="inicio.html">Inicio</a>
-                <a href="tienda.html">Tienda</a>
-                <a href="eventos.html">Eventos</a>
-                <button class="salir"><a href="/0login/index.html">salir</a></button>
+                <a href="/inicio.html">Inicio</a>
+                <a href="/tienda.html">Tienda</a>
+                <a href="/eventos.html">Eventos</a>
+                <button class="salir"><a href="/index.html">salir</a></button>
             </nav>
     </header>
     <!--cuadro de primera publicacion-->
@@ -126,14 +126,15 @@
    <footer class="pie">
         <div class="final">
         <h2>OMEGA</h2>
-            <a href="/9terminos/terminos.html">Terminos del sitio</a>
-            <a href="/8privacidad/privacidad.html">Privacidad de los Anuncios</a>
-            <a href="/7politicas/index.html">Politica de Privacidad</a>
+            <a href="/terminos.html">Terminos del sitio</a>
+            <a href="/privacidad.html">Privacidad de los Anuncios</a>
+            <a href="/politicas.html">Politica de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
 </body>
 
 </html>
+
 
 
