Fix HTML structure and update links in terminos.html

--- a/terminos.html
+++ b/terminos.html
@@ -10,10 +10,10 @@
     <header>
         <h1 class="logo">OMEGA</h1>
         <nav class="nav-principal">
-            <a href="inicio.html" class="link">Inicio</a>
-            <a href="tienda.html" class="link">Tienda</a>
-            <a href="eventos.html"class="link">Eventos</a>
-            <a href="index.html" class="salir">Salir</a>
+            <a href="/inicio.html" class="link">Inicio</a>
+            <a href="/tienda.html" class="link">Tienda</a>
+            <a href="/eventos.html"class="link">Eventos</a>
+            <a href="/index.html" class="salir">Salir</a>
         </nav>
     </header>
     <main class="contenido">
@@ -61,14 +61,15 @@
     <footer class="pie">
         <div class="final">
             <h2>OMEGA</h2>
-            <a href="/9terminos/terminos.html">Términos del sitio</a>
-            <a href="/8privacidad/privacidad.html">Privacidad de los Anuncios</a>
-            <a href="/7politicas/index.html">Política de Privacidad</a>
+            <a href="/terminos.html">Términos del sitio</a>
+            <a href="/privacidad.html">Privacidad de los Anuncios</a>
+            <a href="/politicas.html">Política de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
     </body>
 </html>
+
 
 
 
