--- a/inicio.html
+++ b/inicio.html
@@ -122,15 +122,16 @@
         <footer class="pie">
         <div class="final">
         <h2>OMEGA</h2>
-            <a href="">Terminos del sitio</a>
+            <a href="terminos.html">Terminos del sitio</a>
             <a href="">Sugerencias</a>
-            <a href="">Politica de Privacidad</a>
+            <a href="politicas.html">Politica de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
 </body>
 
 </html>
+
 
 
 
