--- a/privacidad.html
+++ b/privacidad.html
@@ -53,9 +53,9 @@
     <footer class="pie">
         <div class="final">
         <h2>OMEGA</h2>
-            <a href="/9terminos/terminos.html">Terminos del sitio</a>
-            <a href="/8privacidad/privacidad.html">Privacidad de los Anuncios</a>
-            <a href="/7politicas/index.html">Politica de Privacidad</a>
+            <a href="/terminos.html">Terminos del sitio</a>
+            <a href="/privacidad.html">Privacidad de los Anuncios</a>
+            <a href="/politicas.html">Politica de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
