--- a/tienda.html
+++ b/tienda.html
@@ -14,9 +14,9 @@
         <p>"Tecnología al alcance de un clic"</p>
     </div>
     <nav class="nav">
-        <a href="index.html">Inicio</a>
-        <a href="index.html">Eventos</a>
-        <a href="index.html">Sobre Nosotros</a>
+        <a href="inicio.html">Inicio</a>
+        <a href="eventos.html">Eventos</a>
+        <a href="acercade.html">Sobre Nosotros</a>
         <a href="index.html">Salir</a>
 </div>
 
@@ -100,9 +100,9 @@
     <footer class="pie">
         <div class="final">
         <h2>OMEGA</h2>
-            <a href="/9terminos/terminos.html">Terminos del sitio</a>
-            <a href="/8privacidad/privacidad.html">Privacidad de los Anuncios</a>
-            <a href="/7politicas/index.html">Politica de Privacidad</a>
+            <a href="/terminos.html">Terminos del sitio</a>
+            <a href="/privacidad.html">Privacidad de los Anuncios</a>
+            <a href="/politicas.html">Politica de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
