--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="recordar"><a href="">¿Olvidaste tu contraseña?</a></div>
             
             <div class="boton">
-                <a href="/index.html">iniciar sesion</a>
+                <a href="index.html">iniciar sesion</a>
             </div>
             <div class="registrarse">
-                <a href="/registro.html">Registrarse</a>
+                <a href="registro.html">Registrarse</a>
             </div>
         </form>
     </div>
