--- a/inicio.html
+++ b/inicio.html
@@ -11,10 +11,10 @@
     <header>
         <h1 class="logo">OMEGA</h1>
         <nav class="nav-principal">
-            <a href="/acercade.html" class="link">Sobre Nosotros</a>
-            <a href="/tienda.html" class="link">Tienda</a>
-            <a href="/eventos.html" class="link">Eventos</a>
-            <a href="/index.html" class="salir">Salir</a>
+            <a href="acercade.html" class="link">Sobre Nosotros</a>
+            <a href="tienda.html" class="link">Tienda</a>
+            <a href="eventos.html" class="link">Eventos</a>
+            <a href="index.html" class="salir">Salir</a>
         </nav>
     </header>
 <main>
@@ -131,6 +131,7 @@
 </body>
 
 </html>
+
 
 
 
