--- a/registro.html
+++ b/registro.html
@@ -45,11 +45,12 @@
             <input type="date" required> 
         </div>
         <div class="opt">
-            <a href="/index.html">enviar</a>
+            <a href="index.html">enviar</a>
         </div>
     </form>
     </div>
 </body>
 
 </html>
+
 
