--- a/tienda.html
+++ b/tienda.html
@@ -100,9 +100,9 @@
     <footer class="pie">
         <div class="final">
         <h2>OMEGA</h2>
-            <a href="/terminos.html">Terminos del sitio</a>
-            <a href="/privacidad.html">Privacidad de los Anuncios</a>
-            <a href="/politicas.html">Politica de Privacidad</a>
+            <a href="terminos.html">Terminos del sitio</a>
+            <a href="privacidad.html">Privacidad de los Anuncios</a>
+            <a href="politicas.html">Politica de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
