--- a/acercade.html
+++ b/acercade.html
@@ -10,10 +10,10 @@
     <header>
         <h1 class="logo">OMEGA</h1>
         <nav class="nav-principal">
-            <a href="/inicio.html" class="link">Inicio</a>
-            <a href="/tienda.html" class="link">Tienda</a>
-            <a href="/eventos.html"class="link">Eventos</a>
-            <a href="/index.html" class="salir">Salir</a>
+            <a href="inicio.html" class="link">Inicio</a>
+            <a href="tienda.html" class="link">Tienda</a>
+            <a href="eventos.html"class="link">Eventos</a>
+            <a href="index.html" class="salir">Salir</a>
         </nav>
     </header>
     <div class="imagen1">
@@ -74,14 +74,15 @@
     <footer class="pie">
         <div class="final">
         <h2>OMEGA</h2>
-            <a href="/terminos.html">Terminos del sitio</a>
-            <a href="/privacidad.html">Privacidad de los Anuncios </a>
-            <a href="/politicas.html">Politica de Privacidad</a>
+            <a href="terminos.html">Terminos del sitio</a>
+            <a href="privacidad.html">Privacidad de los Anuncios </a>
+            <a href="politicas.html">Politica de Privacidad</a>
             <p>© 2025 OMEGA - Seguridad Digital</p>
         </div>
     </footer>
 </body>
 </html>
+
 
 
 
